Chacnged the index page from Rails to React

--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -1,5 +1,3 @@
-<ul>
-  <% @genres.each do |genre| %>
-    <li><%= link_to genre.name, genre_path(genre) %></li>
-  <% end %>
-</ul>
+<div id="app">
+
+</div>
