--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,33 +9,37 @@
 
   <%= csrf_meta_tags %>
 </head>
-<body>
-
+<body class="background-color">
   <nav class="top-bar">
     <ul class="title-area">
       <li class="name">
-        <h1><a href="/">Musr</a></h1>
+        <h1><a class="title-font titleb" href="/">MUSR</a></h1>
       </li>
     </ul>
+
 
     <section class="top-bar-section">
       <ul class="right">
         <%- if current_user -%>
           <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
         <%- else -%>
-          <li><%= link_to 'Sign Up', new_user_registration_path %></li>
+\          <li><%= link_to 'Sign Up', new_user_registration_path %></li>
           <li><%= link_to 'Sign In', new_user_session_path %></li>
         <%- end -%>
       </ul>
     </section>
   </nav>
 
-  <%- flash.each do |key, value| -%>
-    <div class="flash flash-<%= key %>">
 
-      <%= value %>
-    </div>
-  <%- end -%>
+    <%- flash.each do |key, value| -%>
+    <div data-alert class="alert-box alert radius">
+      <div class="flash flash-<%= key %>">
+
+        <%= value %>
+      </div>
+    <%- end -%>
+    <a href="#" class="close">&times;</a>
+  </div>
 
   <%= yield %>
 
