--- a/app/assets/stylesheets/top_bar.scss
+++ b/app/assets/stylesheets/top_bar.scss
@@ -8,10 +8,18 @@
   font-weight: bold;
 }
 .background-color {
-  background-color: #C0BCB5;
-  margin: auto;
-  
+  background-color: white;
+
+
 }
+
+.background-layer {
+  background-color: #2F2D2E;
+  width: 50%;
+  margin-left: 25%;
+  margin-right: 25%;
+}
+
 
 // .button {
 //   font-weight: bold;
