--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,6 +6,10 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
+<div class="test">
+
+<div class="small-11 large-10 columnss">
+
   <div class="field">
     <%= f.label :first_name, 'First Name' %><br />
     <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name" %>
@@ -40,9 +44,12 @@
   </div>
 
   <%=f.file_field :profile_photo %>
+  </div>
+</div>
 
   <div class="actions">
     <%= f.submit "Sign up" %>
+  </div>
   </div>
 <% end %>
 
