--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,8 +40,10 @@
     <%- end -%>
     <a href="#" class="close">&times;</a>
   </div>
+  <div class="center row testALL">
+    <%= yield %>
+  </div>
 
-  <%= yield %>
 
   <%= javascript_include_tag 'application' %>
 
