--- a/app/assets/stylesheets/genre_index.scss
+++ b/app/assets/stylesheets/genre_index.scss
@@ -3,14 +3,33 @@
   align-items: center;
 }
 
+#Jazz {
+  background-image: url(jazzGenre.jpg);
+}
+#Classical {
+  background-image: url(classicalGenre.jpg);
+}
+#Electronic {
+  background-image: url(electronicGenre.jpg);
+}
+#Country {
+  background-image: url(countryGenre.jpg);
+}
+#Hip-Hop {
+  background-image: url(rapGenre.jpg);
+}
 
-
+#Rock {
+  background-image: url(rockGenre.jpg);
+}
 .button2 {
   font-weight: bold;
-  background-color: #8D3B72;
-  // background-color: rgba(141, 59, 114, 0.6);
+  // background-color: #8D3B72;
+  background-size: cover;
+  background-repeat: no-repeat;
+
   border: none;
-  color: #2F2D2E;
+  color: white;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
@@ -20,12 +39,13 @@
   -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
   width: 250px;
-  height: 100px;
+  height: 400px;
+
 }
 
 .button2:hover {
   background-color: #01BAEF;
-  color: #2F2D2E;
+  color: #DB5461;
 
 }
 .button2:active {
@@ -41,7 +61,37 @@
 .columnss{
   margin: auto;
 }
+.tint {
+  position: sticky;
+  // float: left;
+  margin: auto;
+  // margin-right: inherit;
+  // margin-bottom: inherit;
+  margin-bottom: 20px;
+  cursor: pointer;
+  box-shadow: rgba(0,0,0,.4) 3px 8px 8px;
+}
 
+.tint:before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0,255,255, 0.5);
+  transition: all .3s linear;
+
+}
+
+.tint:hover:before { background: none; }
+
+.t2:before { background: rgba(0,0,255, 0.5); }
+.t3:before { background: rgba(255,0,0, 0.5); }
+.t4:before { background: rgba(0,255,0, 0.5); }
+.t5:before { background: rgba(255,0,240, 0.5); }
+.t6:before { background: rgba(255,102,0, 0.6); }
 // #ap{
 //   float: left;
 // }
