--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="center">
 
-<h2>Sign up</h2>
+<h2 class="center">Sign up</h2>
 </div>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -10,27 +10,27 @@
 
 <div class="small-11 large-10 columnss">
 
-  <div class="field">
+  <div class="field floatL">
     <%= f.label :first_name, 'First Name' %><br />
     <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name" %>
   </div>
 
-  <div class="field">
+  <div class="field floatL">
     <%= f.label :last_name, 'Last Name' %><br />
     <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name" %>
   </div>
 
-  <div class="field">
+  <div class="field floatL">
     <%= f.label :user_name, 'User Name' %><br />
     <%= f.text_field :user_name, autofocus: true, autocomplete: "user_name" %>
   </div>
 
-  <div class="field">
+  <div class="field floatL">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
-  <div class="field">
+  <div class="field floatL">
     <%= f.label :password %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
@@ -38,7 +38,7 @@
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
 
-  <div class="field">
+  <div class="field floatL">
     <%= f.label :password_confirmation, 'Password Confirmation'%><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
@@ -52,5 +52,8 @@
   </div>
   </div>
 <% end %>
+<div class=" center">
+
 
 <%= render "devise/shared/links" %>
+</div>
