--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,3 +15,20 @@
  *= require foundation_and_overrides
 
  */
+
+i{
+  font-size: 50px;
+}
+
+.reviews{
+  border: 2px solid black;
+  width: 60%;
+  opacity: .4;
+  margin: 5px;
+  background-color: white;
+}
+
+.reviews-content{
+  text-align: left;
+  color: black;
+}
