--- a/app/assets/stylesheets/genre_index.scss
+++ b/app/assets/stylesheets/genre_index.scss
@@ -20,7 +20,7 @@
   background-image: url(countryGenre.jpg);
 }
 #Hip-Hop {
-  background-image: url(rapGenre.jpg);
+  background-image: url(rapGenre.jpeg);
 }
 
 #Rock {
