--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -1,7 +1,11 @@
 .formtext {
   color: white;
 }
-
+.imgalign {
+  margin-left: auto;
+   margin-right: auto;
+   width: 40%;
+}
 .field {
     width: 100%;
     padding: 12px 20px;
@@ -35,6 +39,9 @@
 .floatL {
   text-align: left;
 }
+.floatR {
+  text-align: right;
+}
 .test {
   background-color: #F6F7EB;
   width: 50%;
@@ -46,9 +53,9 @@
 }
 .testALL {
   background-color: #2B3A67;
-  width: 50%;
-  margin-left: 25%;
-  margin-right: 25%;
+  width: 60%;
+  margin-left: 20%;
+  margin-right: 20%;
   padding-bottom: 40px;
   padding-top: 30px;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
@@ -63,6 +70,19 @@
   // padding-top: 30px;
   padding: inherit;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+
+}
+.test3 {
+  background-color: #85CB33;
+  width: 50%;
+
+  margin-left: 25%;
+  margin-right: 25%;
+  // padding-bottom: 40px;
+  // padding-top: 30px;
+  padding: inherit;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+
 }
 // background: linear-gradient(31deg, rgba(219,84,97, 0.5), rgba(17,101,182, 0.5));
 // background-size: 200% 200%;
