--- a/app/assets/stylesheets/top_bar.scss
+++ b/app/assets/stylesheets/top_bar.scss
@@ -81,3 +81,8 @@ animation: AnimationName 18s ease infinite;
   -moz-column-count:2;
   -webkit-column-count:2;
 }
+.wrapperform2 {
+  column-count:3;
+  -moz-column-count:3;
+  -webkit-column-count:3;
+}
