--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -9,7 +9,8 @@
 .field {
     width: 100%;
     padding: 12px 20px;
-    margin: 8px 0;
+    margin-bottom: 30px ;
+    margin-top:8px;
     display: inline-block;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -25,7 +26,8 @@
     background-color: rgba(1, 186, 239, 0.8);
     color: white;
     padding: 14px 20px;
-    margin: 8px 0;
+    margin-bottom:30px;
+    margin-top:8px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -66,8 +68,6 @@
 
   margin-left: 25%;
   margin-right: 25%;
-  // padding-bottom: 40px;
-  // padding-top: 30px;
   padding: inherit;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 
@@ -78,31 +78,7 @@
 
   margin-left: 25%;
   margin-right: 25%;
-  // padding-bottom: 40px;
-  // padding-top: 30px;
   padding: inherit;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 
 }
-// background: linear-gradient(31deg, rgba(219,84,97, 0.5), rgba(17,101,182, 0.5));
-// background-size: 200% 200%;
-//
-// -webkit-animation: AnimationName 8s ease infinite;
-// -moz-animation: AnimationName 8s ease infinite;
-// animation: AnimationName 8s ease infinite;
-// }
-// @-webkit-keyframes AnimationName {
-//     0%{background-position:20% 0%}
-//     50%{background-position:81% 100%}
-//     100%{background-position:20% 0%}
-// }
-// @-moz-keyframes AnimationName {
-//     0%{background-position:20% 0%}
-//     50%{background-position:81% 100%}
-//     100%{background-position:20% 0%}
-// }
-// @keyframes AnimationName {
-//     0%{background-position:20% 0%}
-//     50%{background-position:81% 100%}
-//     100%{background-position:20% 0%}
-// }
