--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
         <%= value %>
       </div>
     <%- end -%>
-    <a href="#" class="close">&times;</a>
+    <a href="#" class="close"></a>
   </div>
   <div class="center row testALL">
     <%= yield %>
