--- a/app/assets/stylesheets/genre_index.scss
+++ b/app/assets/stylesheets/genre_index.scss
@@ -5,19 +5,19 @@
 }
 
 #Jazz {
-  background-image: url(jazzGenre.jpg);
+  background-image: image-url('jazzGenre.jpg');
 }
 #Classical {
-  background-image: url(classicalGenre.jpg);
+  background-image: image-url('classicalGenre.jpg');
 }
 #Electronic {
-  background-image: url(electronicGenre.jpg);
+  background-image: image-url('electronicGenre.jpg');
 }
 #Country {
-  background-image: url(countryGenre.jpg);
+  background-image: image-url('countryGenre.jpg');
 }
 #Hip-Hop {
-  background-image: url(rapGenre.jpg);
+  background-image: image-url('rapGenre.jpg');
 }
 
 #Rock {
