--- a/app/assets/stylesheets/genre_index.scss
+++ b/app/assets/stylesheets/genre_index.scss
@@ -21,7 +21,7 @@
 }
 
 #Rock {
-  background-image: url(rockGenre.jpg);
+  background-image: image-url('rockGenre.jpg');
 }
 .button2 {
   font-weight: bold;
